package carmenSandiego.modelo.edificio.comportamiento.pistas;

public interface ComportamientoPistas {

    //void mostrarPistas();
    String getPista();
}
