package carmenSandiego.modelo.pistas;

public class PistaAeropuerto extends ConPista {

    public PistaAeropuerto() {
        this.base = "Se subio a un avion";
    }

}