package carmenSandiego.modelo.pistas;

public class PistaBanco extends ConPista {

    public PistaBanco() {
        this.base = "Vino a cambiar un poco de";
    }

}