package carmenSandiego.modelo.pistas;

public class PistaBiblioteca extends ConPista {

    public PistaBiblioteca() {
        this.base = "Agarro un diccionario";
    }

}
