package carmenSandiego.modelo.pistas;

public class PistaPuerto extends ConPista {

    public PistaPuerto() {
        this.base = "Al lugar que iba exportaban mucho";
    }

}